--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Pathanan.github.io/mid030",
+  "homepage": "http://Pathanan.github.io/midterm030",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
